<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Wisconsin Bestiary</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_submission">NewSubmission</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_existing_submission">ExistingSubmission</string>
    <string name="county_prompt">Choose a county</string>
    <string name="affiliation_prompt">Choose an affiliation</string>
    <string name="privacy_prompt">Choose a privacy setting</string>
    <string name="group_prompt">Choose a group</string>
    <string name="observational_prompt">Choose an observational technique</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>

    <string-array name="county_array">
        <item>Choose a county</item>
        <item>Adams</item>
        <item>Ashland</item>
        <item>Barron</item>
        <item>Bayfield</item>
        <item>Brown</item>
        <item>Buffalo</item>
        <item>Burnett</item>
        <item>Calumet</item>
        <item>Chippewa</item>
        <item>Clark</item>
        <item>Columba</item>
        <item>Crawford</item>
        <item>Dane</item>
        <item>Dodge</item>
        <item>Door</item>
        <item>Douglan</item>
        <item>Dunn</item>
        <item>Eau Claire</item>
        <item>Florence</item>
        <item>Fond du Lac</item>
        <item>Forest</item>
        <item>Grant</item>
        <item>Green</item>
        <item>Green Lake</item>
        <item>Iowa</item>
        <item>Iron</item>
        <item>Jackson</item>
        <item>Jefferson</item>
        <item>Juneau</item>
        <item>Kenosha</item>
        <item>Kewaunee</item>
        <item>LaCrosse</item>
        <item>Lafayette</item>
        <item>Langlade</item>
        <item>Lincoln</item>
        <item>Manitowoc</item>
        <item>Marathon</item>
        <item>Marinette</item>
        <item>Marquette</item>
        <item>Menominee</item>
        <item>Milwaukee</item>
        <item>Monroe</item>
        <item>Oconto</item>
        <item>Oneida</item>
        <item>Outagamie</item>
        <item>Ozaukee</item>
        <item>Pepin</item>
        <item>Pierce</item>
        <item>Polk</item>
        <item>Portage</item>
        <item>Price</item>
        <item>Racine</item>
        <item>Richland</item>
        <item>Rock</item>
        <item>Rusk</item>
        <item>Saint Croix</item>
        <item>Sauk</item>
        <item>Sawyer</item>
        <item>Shawano</item>
        <item>Sheboygan</item>
        <item>Taylor</item>
        <item>Trempealeau</item>
        <item>Vernon</item>
        <item>Vilas</item>
        <item>Walworth</item>
        <item>Washburn</item>
        <item>Washington</item>
        <item>Waukesha</item>
        <item>Waupaca</item>
        <item>Waushara</item>
        <item>Winnebago</item>
        <item>Wood</item>
    </string-array>
    <string-array name="group_array">
        <item>Choose a group/phyla</item>
        <item>ameba</item>
        <item>amphibians</item>
        <item>bird</item>
        <item>butterflies</item>
        <item>centipedes</item>
        <item>ciliates</item>
        <item>crustacean</item>
        <item>dragonflies</item>
        <item>fish</item>
        <item>flagellate</item>
        <item>flatworm</item>
        <item>hydra</item>
        <item>leech</item>
        <item>mammal</item>
        <item>millpedes</item>
        <item>mussels</item>
        <item>reptile</item>
        <item>rotifer</item>
        <item>slug/snails</item>
        <item>sponge</item>
        <item>ticks/spiders</item>
        <item>unsure</item>
    </string-array>
    <string-array name="affiliation_array">
        <item>Choose an affiliation</item>
        <item>University of Wisconsin - Oshkosh</item>
        <item>Other</item>
    </string-array>
    <string-array name="privacy_array">
        <item>Choose a privacy setting</item>
        <item>My information will be public</item>
        <item>My information will be private</item>
        <item>My information will be obscured</item>
    </string-array>
    <string-array name="observational_array">
        <item>Choose an observational technique</item>
        <item>Casual</item>
        <item>Stationary</item>
        <item>Traveling</item>
        <item>Area</item>
    </string-array>

    <string name="title_activity_vew_video">Vew Video</string>
    <string name="title_activity_audio_recording">AudioRecording</string>
    <string name="title_activity_view_weather">ViewWeather</string>

</resources>
